main.tf
provider "aws" {
    region = "us-east-1"
    access_key = "AKIAR6XQQ3Z5U4ICKGWO"
    secret_key = "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"
}

// creating an instance

# resource "aws_instance" "new" {
#   ami           = "ami-052efd3df9dad4825"
#   instance_type = "t1.micro"

#   tags = {
#     Name = "HelloWorld"
#   }
# }

# //creating a subnet under this VPC

# resource "aws_subnet" "main" {
#   vpc_id     = aws_vpc.my-vpc
#   cidr_block = "10.0.1.0/24"

#   tags = {
#     Name = "prod-subnet"
#   }
# }

//1. creating a VPC
resource "aws_vpc" "my-vpc" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "production"
  }
}
//2. creating a internet gateway
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.my-vpc.id

  tags = {
    Name = "pro"
  }
}

//3. create custom route table
resource "aws_route_table" "prod-route-table" {
  vpc_id = aws_vpc.my-vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  route {
    ipv6_cidr_block        = "::/0"
     gateway_id = aws_internet_gateway.gw.id
  }

  tags = {
    Name = "prod"
  }
}

//4. create a subnet
resource "aws_subnet" "subnet-1" {
  vpc_id = aws_vpc.my-vpc.id
  cidr_block = "10.0.1.0/24"
  availability_zone = "us-east-1a"

  tags = {
    Name = "prod-subnet"
  }
}

//5. associate subnet with route table 
resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.subnet-1.id
  route_table_id = aws_route_table.prod-route-table.id
}

//6. create security group to allow port 22, 80, 433
resource "aws_security_group" "allow-web" {
  name        = "allow-web-traffic"
  description = "Allow web inbound traffic"
  vpc_id      = aws_vpc.my-vpc.id

  ingress {
    description      = "HTTPS"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
    ingress {
    description      = "HTTP"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
    ingress {
    description      = "SSH"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "allow_web"
  }
}

//7. create a network interface with an ip in the subnet that was created in step 4
resource "aws_network_interface" "web-server-nic" {
  subnet_id       = aws_subnet.subnet-1.id
  private_ips     = ["10.0.1.50"]
  security_groups = [aws_security_group.allow-web.id]

}

//8. assign an elastic ip to the network interface created in step 7
resource "aws_eip" "two" {
  vpc                       = true
  instance = aws_instance.new.id
  network_interface         = aws_network_interface.web-server-nic.id
  associate_with_private_ip = "10.0.1.50"
  depends_on = [aws_internet_gateway.gw]
}

//9. create ubuntu server and install/enable apache2
 resource "aws_instance" "new" {
   ami           = "ami-052efd3df9dad4825"
   instance_type = "t2.micro"
   availability_zone = "us-east-1a"
   key_name = "imp-key"

   network_interface {
     device_index = 0
     network_interface_id = aws_network_interface.web-server-nic.id
   }
  user_data = <<-EOF
                #!/bin/bash
                sudo apt update -y
                sudo apt install apache2 -y
                sudo systemctl start apache2
                sudo bash -c 'echo your first web server > /var/www/html/index.html'
                EOF
 tags = {
  Name = "web-server"
 }            
 }
